tests/baselines/reference/parser509668.errors.txt
==== tests/cases/compiler/parser509668.ts (1 errors) ====
    class Foo3 {
      // Doesn't work, but should
      constructor (public ...args: string[]) { }
                          ~~~
!!! parser509668.ts(3,23): error TS1003: Identifier expected.
    }